Добавил инпут-колор через компонент

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
       .task{
         position: relative;
       }
+      .cursors{
+        cursor: pointer;
+      }
+      .input-color{
+        width: 100%;
+      }
     </style>
   </head>
   <body>
@@ -54,6 +60,7 @@
         <div text-align="center">
           <h2>MY TODO</h2>
         </div>
+
         <div class="d-flex justify-content-center align-items-center mb-5">
           <div>
             <input
@@ -89,19 +96,19 @@
               <div class="col-4">
                 <form>
                   <input
-                    class="d-block mb-3"
+                    class="d-block "
                     type="text"
                     placeholder="Color"
                     minlength="1"
                     v-model="Color"
                   />
                 </form>
+                <inputtext  @inputtext="textinput"></inputtext>
                 <form>
-                  <button 
+                  <button
                     @click="addTask()" @keyup.enter="addTask()"
                     type="button"
                     class="btn btn-primary btn-lg btn-block"
-                    
                  >
                     ADD
                   </button>
@@ -113,7 +120,8 @@
                 <br />
               </div>
               <div class="col-4">
-                <input class="d-block mb-3" type="text" placeholder="BgColor" v-model="BgColor"/>
+                <input class="d-block" type="text" placeholder="BgColor" v-model="BgColor"/>
+                <inputbg  @inputsbg="bginput"></inputbg>
               </div>
             </div>
           </div>
@@ -123,14 +131,14 @@
             <h2>To do </h2>
             <tempate v-for="(task, i) in toDo" :key="i">
               <div
-                class="task m-3 p-2"
-                :style="[{'background': BgColor}]"
+                class="task m-3 p-2 cursors"
+                :style="[{'background': task.BgColor}]"
               >
               <button @click="array(i, 'inp')"
                        type="button"
                       class="btn btn-secondary btn-lg butto">
                       &rarr;</button>
-                      <div v-bind:style="{ color: Color, fontSize: fontSize + 'px', background: BgColor}"style="min-height:50px;">
+                      <div v-bind:style="{ color: task.Color, fontSize: task.fontSize + 'px', background:task.BgColor}"style="min-height:50px;">
                         <div class="task-title"><b>{{ task.title }}</b></div>
                         <div class="task-content">{{ task.content }}</div>
                       </div>
@@ -140,8 +148,8 @@
           <div class="col-4 bg-warning">
             <h2>In progress</h2>
             <template v-for="(task ,i) in inProgress" :key="i">
-              <div class="task m-3 p-2"   :style="[{'background': BgColor}]">
-                <div :style="{ color: Color, fontSize: fontSize + 'px', background: BgColor}"style="min-height:50px;">  
+              <div class="task m-3 p-2 cursors"   :style="[{'background': task.BgColor}]">
+                <div :style="{ color: task.Color, fontSize: task.fontSize + 'px', background: task.BgColor}"style="min-height:50px; ">
                       <div class="tasksclear-titlec" >
                         <button @click="array(i, 'don')"
                     type="button"
@@ -152,15 +160,15 @@
                   &larr;</button></div>
                       <div class="tasksclear-contentc">{{ task.content }}</div>
                     </div>
-            </div> 
+            </div>
           </template>
           </div>
           <div class="col-4 bg-success">
             <h2>Done</h2>
             <template v-for="(task ,i) in done" :key="i">
-                  <div class="task m-3 p-2"   :style="[{'background': BgColor}]">
-                    <div v-bind:style="{ color: Color, fontSize: fontSize + 'px', background: BgColor}"style="min-height:50px;">  
-                    <div class="tasksclear-titlec" style="min-width:180px">
+                  <div class="task m-3 p-2"   :style="[{'background':task.BgColor}]">
+                    <div v-bind:style="{ color: task.Color, fontSize: task.fontSize + 'px', background: task.BgColor}"style="min-height:50px;">
+                    <div class="tasksclear-titlec" style="min-width:180px cursors">
                     <button @click="array(i, 'inp1')"
                     type="button"
                   class="btn btn-secondary btn-lg butto1">
@@ -177,6 +185,32 @@
   </body>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
   <script>
+    Vue.component('inputtext',{
+      data(){
+        return{
+          textin:'',
+        }
+      },
+      methods:{
+          inputtext:function(){
+            this.$emit('inputtext',this.textin);
+          }
+      },
+      template:'<div><input type="color" v-model="textin" @input="inputtext" class="input-color mb-4"></div>'
+    })
+    Vue.component('inputbg',{
+      data(){
+        return{
+         bg:'',
+        }
+      },
+      methods:{
+          inputsbg:function(){
+              this.$emit('inputsbg', this.bg);
+          }
+      },
+      template:'<div><input type="color" v-model="bg" @input="inputsbg" class="input-color mb-3"/></div>',
+    })
     const app = new Vue({
       el: '#app',
       data: {
@@ -189,15 +223,22 @@
         Color: '',
         BgColor:'',
     },
-      methods: {
+    methods: {
+        bginput:function(bg) {
+          this.BgColor = bg;
+          console.log(this.BgColor)
+        },
+        textinput:function(text){
+          this.Color = text;
+        },
         addTask() {
           if(!this.title || !this.content && !this.BgColor ){
             return
           }else{
-            this.toDo.push({ title: this.title, content: this.content, fontSize: this.fontSize +"px" });
+            this.toDo.push({ title: this.title, content: this.content, fontSize: this.fontSize +"px", Color: this.Color, BgColor: this.BgColor });
             this.title = this.content = '';
           }
-        },     
+        },
         array(i, name){
           if(name === 'inp'){
           this.inProgress.push(this.toDo[i]);
