--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       }
       .butto {
       position: absolute;
-      right: 5px;
-        top:5px;
+      right: 0px;
+        top:0px;
         float:right;
        }
        .butto1 {
       position: absolute;
-      left: 5px;
-        top:5px;
+      left: 0px;
+        top:0px;
         float:left;
        }
       div{
@@ -45,16 +45,22 @@
       .task{
         position: relative;
       }
+      .cursors{
+        cursor: pointer;
+      }
+      .input-color{
+        width: 100%;
+      }
     </style>
   </head>
   <body>
 
     <div class="container">
       <div id="app">
-
         <div text-align="center">
           <h2>MY TODO</h2>
         </div>
+
         <div class="d-flex justify-content-center align-items-center mb-5">
           <div>
             <input
@@ -80,28 +86,30 @@
                     type="number"
                     placeholder="font-size"
                     min="1"
+                    v-model="fontSize"
                   />
                 </form>
                 <div clas="row">
-
                   </button>
                 </div>
               </div>
               <div class="col-4">
                 <form>
                   <input
-                    class="d-block mb-3"
+                    class="d-block "
                     type="text"
                     placeholder="Color"
                     minlength="1"
+                    v-model="Color"
                   />
                 </form>
+                <inputtext  @inputtext="textinput"></inputtext>
                 <form>
                   <button
-                    @click="addTask()"
+                    @click="addTask()" @keyup.enter="addTask()"
                     type="button"
                     class="btn btn-primary btn-lg btn-block"
-                  >
+                 >
                     ADD
                   </button>
                   <div class="d-flex justify-content-center align-items-center mb-5">
@@ -112,57 +120,63 @@
                 <br />
               </div>
               <div class="col-4">
-                <input class="d-block mb-3" type="text" placeholder="BgColor" />
+                <input class="d-block" type="text" placeholder="BgColor" v-model="BgColor"/>
+                <inputbg  @inputsbg="bginput"></inputbg>
               </div>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-4 bg-primary">
-            <h2>To do</h2>
+            <h2>To do </h2>
             <tempate v-for="(task, i) in toDo" :key="i">
               <div
-                class="task m-3 p-2 bg-secondary"
-                :style="[{'background': task.background}]"
+                class="task m-3 p-2 cursors"
+                :style="[{'background': task.BgColor}]"
               >
               <button @click="array(i, 'inp')"
                        type="button"
                       class="btn btn-secondary btn-lg butto">
                       &rarr;</button>
-                <div class="task-title"><b>{{ task.title }}</b></div>
-                <div class="task-content">{{ task.content }}</div>
+                      <div v-bind:style="{ color: task.Color, fontSize: task.fontSize + 'px', background:task.BgColor}"style="min-height:50px;">
+                        <div class="task-title"><b>{{ task.title }}</b></div>
+                        <div class="task-content">{{ task.content }}</div>
+                      </div>
               </div>
             </tempate>
           </div>
           <div class="col-4 bg-warning">
             <h2>In progress</h2>
             <template v-for="(task ,i) in inProgress" :key="i">
-              <div class="task m-3 p-2 bg-primary">
-                <div class="tasksclear-titlec">
-                  <button @click="array(i, 'don')"
-              type="button"
-             class="btn btn-secondary btn-lg butto">
-             &rarr;</button><b>{{ task.title }} </b><button @click="array(i,'tod')"
-             type="button"
-            class="btn btn-secondary btn-lg butto1">
-            &larr;</button></div>
-                <div class="tasksclear-contentc">{{ task.content }}</div>
-              </div>
+              <div class="task m-3 p-2 cursors"   :style="[{'background': task.BgColor}]">
+                <div :style="{ color: task.Color, fontSize: task.fontSize + 'px', background: task.BgColor}"style="min-height:50px; ">
+                      <div class="tasksclear-titlec" >
+                        <button @click="array(i, 'don')"
+                    type="button"
+                  class="btn btn-secondary btn-lg butto">
+                  &rarr;</button><b>{{ task.title }} </b><button @click="array(i,'tod')"
+                  type="button"
+                  class="btn btn-secondary btn-lg butto1">
+                  &larr;</button></div>
+                      <div class="tasksclear-contentc">{{ task.content }}</div>
+                    </div>
+            </div>
           </template>
           </div>
           <div class="col-4 bg-success">
-
             <h2>Done</h2>
             <template v-for="(task ,i) in done" :key="i">
-            <div class="task m-3 p-2 bg-primary">
-              <div class="tasksclear-titlec">
-              <button @click="array(i, 'inp1')"
-              type="button"
-             class="btn btn-secondary btn-lg butto1">
-             &larr;</button><b>{{ task.title }} </b>
+                  <div class="task m-3 p-2"   :style="[{'background':task.BgColor}]">
+                    <div v-bind:style="{ color: task.Color, fontSize: task.fontSize + 'px', background: task.BgColor}"style="min-height:50px;">
+                    <div class="tasksclear-titlec" style="min-width:180px cursors">
+                    <button @click="array(i, 'inp1')"
+                    type="button"
+                  class="btn btn-secondary btn-lg butto1">
+                  &larr;</button><b>{{ task.title }} </b>
+                    </div>
+                  <div class="tasksclear-contentc">{{ task.content }}</div>
+                  </div>
               </div>
-             <div class="tasksclear-contentc">{{ task.content }}</div>
-            </div>
               </template>
           </div>
         </div>
@@ -171,6 +185,32 @@
   </body>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
   <script>
+    Vue.component('inputtext',{
+      data(){
+        return{
+          textin:'',
+        }
+      },
+      methods:{
+          inputtext:function(){
+            this.$emit('inputtext',this.textin);
+          }
+      },
+      template:'<div><input type="color" v-model="textin" @input="inputtext" class="input-color mb-4"></div>'
+    })
+    Vue.component('inputbg',{
+      data(){
+        return{
+         bg:'',
+        }
+      },
+      methods:{
+          inputsbg:function(){
+              this.$emit('inputsbg', this.bg);
+          }
+      },
+      template:'<div><input type="color" v-model="bg" @input="inputsbg" class="input-color mb-3"/></div>',
+    })
     const app = new Vue({
       el: '#app',
       data: {
@@ -179,13 +219,24 @@
         done:[],
         title: '',
         content: '',
+        fontSize: '',
+        Color: '',
+        BgColor:'',
     },
-      methods: {
+    methods: {
+        bginput:function(bg) {
+          this.BgColor = bg;
+          console.log(this.BgColor)
+        },
+        textinput:function(text){
+          this.Color = text;
+        },
         addTask() {
-          if(!this.title || !this.content ){
+          if(!this.title || !this.content && !this.BgColor ){
             return
           }else{
-            this.toDo.push({ title: this.title, content: this.content, fontSize: this.fontSize });
+            this.toDo.push({ title: this.title, content: this.content, fontSize: this.fontSize +"px", Color: this.Color, BgColor: this.BgColor });
+            this.title = this.content = '';
           }
         },
         array(i, name){
